crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__ignored_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 0 (trace "first" in error) (trace "second" in 0) of
  0 ignored#1 ignored#2 -> trace "body" in 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (constr 0
      (force [[(force (builtin trace)) (con string "first")] (delay (error))])
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 0))]))
    (lam ignored_1
      (lam ignored_2
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 42))])))))
--- optimized Core
let anf#5 : int = trace "first" in error in
let anf#6 : int = trace "second" in 0 in
trace "body" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam anf_1
      [(lam anf_2 (force [[builtin_3 (con string "body")] (delay (con integer 42))]))
        (force [[builtin_3 (con string "second")] (delay (con integer 0))])])
      (force [[builtin_3 (con string "first")] (delay (error))])])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Tag constr 0 (trace "first" in error) (trace "second" in 0) of
  0 ignored#1 ignored#2 -> trace "body" in 42
--- uplc before
(program 1.1.0
  (case
    (constr 0
      (force [[(force (builtin trace)) (con string "first")] (delay (error))])
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 0))]))
    (lam ignored_1
      (lam ignored_2
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 42))])))))
--- core after
let ignored#1 : int = trace "first" in error in
let ignored#2 : int = trace "second" in 0 in
trace "body" in 42
--- uplc after
(program 1.1.0
  [(lam ignored_1
    [(lam ignored_2
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 42))]))
      (force
        [[(force (builtin trace)) (con string "second")] (delay (con integer 0))])])
    (force [[(force (builtin trace)) (con string "first")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["first"]
