crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__missing_field.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
(case@Tag constr 0 of
  0 x#1 -> x#1) 42
--- unoptimized UPLC
(program 1.1.0 [(case (constr 0) (lam x_1 x_1)) (con integer 42)])
--- optimized Core
let anf#3 : @constr[0]() = constr 0 in
let anf#4 : int -> int = case@Tag anf#3 of
  0 x#2 -> x#2 in
anf#4 42
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 [(lam anf_6 [anf_6 (con integer 42)]) (case anf_1 (lam x_5 x_5))])
    (constr 0)])
--- isolated pass
--- core before
(case@Tag constr 0 of
  0 x#1 -> x#1) 42
--- uplc before
(program 1.1.0 [(case (constr 0) (lam x_1 x_1)) (con integer 42)])
--- core after
(case@Tag constr 0 of
  0 x#1 -> x#1) 42
--- uplc after
(program 1.1.0 [(case (constr 0) (lam x_1 x_1)) (con integer 42)])
--- result
(con integer 42)
--- logs
[]
