crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__nullary.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 0 of
  0 -> 42
  1 ignored#1 -> 42
  2 ignored#2 ignored#3 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (constr 0)
    (con integer 42)
    (lam ignored_1 (con integer 42))
    (lam ignored_2 (lam ignored_3 (con integer 42)))))
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
case@Tag constr 0 of
  0 -> 42
  1 ignored#1 -> 42
  2 ignored#2 ignored#3 -> 42
--- uplc before
(program 1.1.0
  (case
    (constr 0)
    (con integer 42)
    (lam ignored_1 (con integer 42))
    (lam ignored_2 (lam ignored_3 (con integer 42)))))
--- core after
42
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
