crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__unexpanded_default.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 280
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(c), pretty(after))"
---
--- before
case@Tag constr 0 of
  0 -> 42
  _ -> 0
--- after
case@Tag constr 0 of
  0 -> 42
  _ -> 0
--- errors
InvalidCase("tag defaults must be expanded using constructor arities")
InvalidCase("tag defaults must be expanded using constructor arities")
