crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__unknown_tag.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 1 (trace "field" in 0) of
  0 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (constr 1
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)))
--- optimized Core
let anf#1 : int = trace "field" in 0 in
let anf#2 : @constr[1](int) = constr 1 anf#1 in
case@Tag anf#2 of
  0 -> 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_3 [(lam anf_4 (case anf_4 (con integer 42))) (constr 1 anf_3)])
      (force [[builtin_5 (con string "field")] (delay (con integer 0))])])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Tag constr 1 (trace "field" in 0) of
  0 -> 42
--- uplc before
(program 1.1.0
  (case
    (constr 1
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)))
--- core after
case@Tag constr 1 (trace "field" in 0) of
  0 -> 42
--- uplc after
(program 1.1.0
  (case
    (constr 1
      (force [[(force (builtin trace)) (con string "field")] (delay (con integer 0))]))
    (con integer 42)))
--- result
error: MissingCaseBranch([Constant(Integer(42))], Constr(1, [Con(Integer(0))]))
--- logs
["field"]
